Checkpoint commit. All in place except for preface and list of used symbols and abbreviations. THE THESIS IS NEARLY, NEARLY JUST COMPLETE

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -1538,3 +1538,197 @@ year = {2000}
    year = {2002},
 }
 
+@article{Du2007,
+   author = {D Du and H Zhang and D Srolovitz},
+   doi = {10.1016/j.actamat.2006.08.038},
+   issn = {13596454},
+   issue = {2},
+   journal = {Acta Materialia},
+   month = {1},
+   pages = {467-471},
+   publisher = {Pergamon},
+   title = {Properties and determination of the interface stiffness},
+   volume = {55},
+   url = {https://linkinghub.elsevier.com/retrieve/pii/S1359645406006161},
+   year = {2007},
+}
+
+@article{Herring1999,
+   author = {Conyers Herring},
+   doi = {10.1007/978-3-642-59938-5_2},
+   isbn = {978-3-642-59938-5},
+   journal = {Fundamental Contributions to the Continuum Theory of Evolving Phase Interfaces in Solids},
+   pages = {33-69},
+   publisher = {Springer, Berlin, Heidelberg},
+   title = {Surface Tension as a Motivation for Sintering},
+   url = {https://link.springer.com/chapter/10.1007/978-3-642-59938-5_2},
+   year = {1999},
+}
+
+@article{Trautt2005,
+   author = {Z.T. Trautt and M. Upmanyu},
+   doi = {10.1016/j.scriptamat.2004.12.033},
+   issn = {13596462},
+   issue = {11},
+   journal = {Scripta Materialia},
+   month = {6},
+   pages = {1175-1179},
+   publisher = {Pergamon},
+   title = {Direct two-dimensional calculations of grain boundary stiffness},
+   volume = {52},
+   url = {https://linkinghub.elsevier.com/retrieve/pii/S135964620500014X},
+   year = {2005},
+}
+
+@article{Moore2021,
+   author = {Robert D. Moore and Timothy Beecroft and Gregory S. Rohrer and Christopher M. Barr and Eric R. Homer and Khalid Hattar and Brad L. Boyce and Fadi Abdeljawad},
+   doi = {10.1016/J.ACTAMAT.2021.117220},
+   issn = {1359-6454},
+   journal = {Acta Materialia},
+   keywords = {Equilibrium shape,Grain boundary energy,Grain boundary migration,Grain boundary stiffness,Plane normal},
+   month = {10},
+   pages = {117220},
+   publisher = {Pergamon},
+   title = {The grain boundary stiffness and its impact on equilibrium shapes and boundary migration: Analysis of the Sigma5, 7, 9, and 11 boundaries in Ni},
+   volume = {218},
+   year = {2021},
+}
+
+@article{Blixt2022,
+   author = {Kevin Hult Blixt and Håkan Hallberg},
+   doi = {10.1088/1361-651X/ac3ca1},
+   issn = {0965-0393},
+   issue = {1},
+   journal = {Modelling and Simulation in Materials Science and Engineering},
+   keywords = {capillary fluctuation method,grain boundary,grain boundary energy,grain boundary stiffness,grain boundary structure,phase field crystal},
+   month = {1},
+   pages = {014002},
+   publisher = {IOP Publishing},
+   title = {Evaluation of grain boundary energy, structure and stiffness from phase field crystal simulations},
+   volume = {30},
+   url = {https://iopscience.iop.org/article/10.1088/1361-651X/ac3ca1},
+   year = {2022},
+}
+
+@article{Rowenhorst2005,
+   author = {D. J. Rowenhorst and P. W. Voorhees},
+   doi = {10.1007/s11661-005-0333-7},
+   issn = {10735623},
+   issue = {8},
+   journal = {Metallurgical and Materials Transactions A: Physical Metallurgy and Materials Science},
+   pages = {2127-2135},
+   title = {Measurements of the grain boundary energy and anisotropy in tin},
+   volume = {36},
+   year = {2005},
+}
+
+@article{Tian2007,
+   author = {N. Tian and Z.-Y. Zhou and S.-G. Sun and Y. Ding and Z. L. Wang},
+   doi = {10.1126/science.1140484},
+   issn = {0036-8075},
+   issue = {5825},
+   journal = {Science},
+   month = {5},
+   pages = {732-735},
+   title = {Synthesis of Tetrahexahedral Platinum Nanocrystals with High-Index Facets and High Electro-Oxidation Activity},
+   volume = {316},
+   url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1140484},
+   year = {2007},
+}
+
+@article{PierreLuis2016,
+   author = {Olivier Pierre-Louis},
+   doi = {10.1016/j.pcrysgrow.2016.04.009},
+   issn = {09608974},
+   issue = {2},
+   journal = {Progress in Crystal Growth and Characterization of Materials},
+   keywords = {Crystal growth,Solid-state wetting,Thin films,Wetting},
+   month = {6},
+   pages = {177-202},
+   publisher = {Elsevier Ltd},
+   title = {Solid-state wetting at the nanoscale},
+   volume = {62},
+   url = {https://linkinghub.elsevier.com/retrieve/pii/S0960897416300122},
+   year = {2016},
+}
+
+@misc{Bormashenko2021,
+   author = {Edward Bormashenko and Viktor Valtsifer},
+   doi = {10.1016/j.cis.2021.102510},
+   issn = {00018686},
+   journal = {Advances in Colloid and Interface Science},
+   keywords = {Anti-icing surfaces,Heterogeneous nucleation,Interfacial crystallization,Partial wetting,Winterbottom construction,Wulff construction},
+   month = {10},
+   publisher = {Elsevier B.V.},
+   title = {Interfacial crystallization at the intersection of thermodynamic and geometry},
+   volume = {296},
+   year = {2021},
+}
+
+@article{Kaischew1951,
+   author = {R. Kaischew},
+   journal = {Commun. Bulg. Acad. Sci.},
+   note = {reference 1.50 by milchev 2002 about the first publication of the equilibrium stable shape of faceted particle on a plane},
+   pages = {191},
+   title = {"unknown title"},
+   volume = {2},
+   year = {1951},
+}
+
+@article{Milchev2008,
+   author = {Alexander Milchev},
+   doi = {10.1134/S1023193508060025},
+   issn = {1023-1935},
+   issue = {6},
+   journal = {Russian Journal of Electrochemistry},
+   month = {6},
+   pages = {619-645},
+   publisher = {SP MAIK Nauka/Interperiodica},
+   title = {Electrocrystallization: Nucleation and growth of nano-clusters on solid surfaces},
+   volume = {44},
+   url = {http://link.springer.com/10.1134/S1023193508060025},
+   year = {2008},
+}
+
+@article{Thompson2012,
+   author = {Carl V. Thompson},
+   doi = {10.1146/annurev-matsci-070511-155048},
+   issn = {1531-7331},
+   issue = {1},
+   journal = {Annual Review of Materials Research},
+   keywords = {agglomeration,film stability,hole formation,hole growth,surface energy,templated self-assembly},
+   month = {8},
+   pages = {399-434},
+   publisher = { Annual Reviews },
+   title = {Solid-State Dewetting of Thin Films},
+   volume = {42},
+   url = {https://www.annualreviews.org/doi/10.1146/annurev-matsci-070511-155048},
+   year = {2012},
+}
+
+@article{Anders2010,
+   author = {André Anders},
+   doi = {10.1016/J.TSF.2009.10.145},
+   issn = {0040-6090},
+   issue = {15},
+   journal = {Thin Solid Films},
+   keywords = {Homologous temperature,Ion etching,Morphology,Plasma assistance,Potential and kinetic energy,Stress,Structure zone diagram,Thin film deposition},
+   month = {5},
+   pages = {4087-4090},
+   publisher = {Elsevier},
+   title = {A structure zone diagram including plasma-based deposition and ion etching},
+   volume = {518},
+   year = {2010},
+}
+
+@article{Ustarroz2013,
+   author = {Jon Ustarroz and Joshua A. Hammons and Thomas Altantzis and Annick Hubin and Sara Bals and Herman Terryn},
+   doi = {10.1021/ja402598k},
+   issn = {00027863},
+   issue = {31},
+   journal = {Journal of the American Chemical Society},
+   pages = {11550-11561},
+   title = {A generalized electrochemical aggregative growth mechanism},
+   volume = {135},
+   year = {2013},
+}
