--- a/thesis.tex
+++ b/thesis.tex
@@ -23,10 +23,10 @@
 \author{Martin}{Minar}
 
 \supervisor{Prof.~dr.~ir.~Nele~Moelans}{}
-\supervisor{Prof.~dr.~ir.~S.~Leader}{}
 \president{Prof.~dr.~ir.~The~Chairman}{}
 \jurymember{Prof.~dr.~ir.~Marc~Seefeldt}{}
-\jurymember{Prof.~dr.~ir.~The~Other}{}
+\jurymember{Prof.~dr.~ir.~Kim~Vanmeensel}{}
+\jurymember{Prof.~dr.~ir.~Joris~Proost}{}
 \externaljurymember{Prof.~dr.~External~Jurymember}{Far Away}
 
 % Your research group within the department
@@ -149,8 +149,8 @@
 %\myprintnomenclature
 
 \tableofcontents
-%\listoffigures
-%\listoftables
+\listoffigures
+\listoftables
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter % to get \pagenumbering{arabic}
@@ -161,7 +161,7 @@
 \includechapter{01introduction}
 \includechapter{02anisoIEintro}
 \includechapter{03PFintro} 
-%\includechapter{04PFMoelans} % EMPTY
+%%%\includechapter{04PFMoelans} % EMPTY
 \includechapter{05paper1} 
 \includechapter{06PFnucleationBarrier} 
 \includechapter{06paper2} 
@@ -173,12 +173,12 @@
 
 \appendix
 
-%\includeappendix{91functionalDerivative} 
-%\includeappendix{92PFderivations} 
-%\includeappendix{93PFparametersDetermination} 
-%\includeappendix{94NumericalImplementation} 
-%\includeappendix{95LagrangeMultipliersPF} 
-%\includeappendix{96WulffProperties} 
+\includeappendix{91functionalDerivative} 
+%%%%%\includeappendix{92PFderivations} 
+\includeappendix{93PFparametersDetermination} 
+\includeappendix{94NumericalImplementation} 
+\includeappendix{95LagrangeMultipliersPF} 
+\includeappendix{96WulffProperties} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\backmatter
