--- a/thesis.tex
+++ b/thesis.tex
@@ -161,7 +161,7 @@
 \includechapter{01introduction}
 \includechapter{02anisoIEintro}
 \includechapter{03PFintro} 
-%%%\includechapter{04PFMoelans} % EMPTY
+%%%%\includechapter{04PFMoelans} % EMPTY
 \includechapter{05paper1} 
 \includechapter{06PFnucleationBarrier} 
 \includechapter{06paper2} 
@@ -174,7 +174,7 @@
 \appendix
 
 \includeappendix{91functionalDerivative} 
-%%%%%\includeappendix{92PFderivations} 
+%%%%%%\includeappendix{92PFderivations} 
 \includeappendix{93PFparametersDetermination} 
 \includeappendix{94NumericalImplementation} 
 \includeappendix{95LagrangeMultipliersPF} 
