all remarks from Nele resolved, added extra chapter on other types of Winterbottom construction.

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -1878,3 +1878,61 @@ year = {2000}
    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/aenm.202402636},
    year = {2024},
 }
+
+@article{Vermaak1968,
+   author = {J. S. Vermaak and C. W. Mays and D. Kuhlmann-Wilsdorf},
+   doi = {10.1016/0039-6028(68)90118-0},
+   issn = {0039-6028},
+   issue = {2},
+   journal = {Surface Science},
+   month = {10},
+   pages = {128-133},
+   publisher = {North-Holland},
+   title = {On surface stress and surface tension: I. Theoretical considerations},
+   volume = {12},
+   year = {1968},
+}
+
+@article{Steinbach2023,
+   author = {Ingo Steinbach and Hesham Salama},
+   city = {Cham},
+   doi = {10.1007/978-3-031-21171-3_3},
+   isbn = {978-3-031-21171-3},
+   journal = {Lectures on Phase Field},
+   pages = {31-39},
+   publisher = {Springer, Cham},
+   title = {Capillarity},
+   url = {https://doi.org/10.1007/978-3-031-21171-3_3},
+   year = {2023},
+}
+
+@article{Zucker2012,
+   author = {Rachel V. Zucker and Dominique Chatain and Ulrich Dahmen and Serge Hagège and W. Craig Carter},
+   doi = {10.1007/s10853-012-6739-x},
+   issn = {0022-2461},
+   issue = {24},
+   journal = {Journal of Materials Science},
+   month = {12},
+   pages = {8290-8302},
+   publisher = {Kluwer Academic Publishers},
+   title = {New software tools for the calculation and display of isolated and attached interfacial-energy minimizing particle shapes},
+   volume = {47},
+   url = {http://link.springer.com/10.1007/s10853-012-6739-x},
+   year = {2012},
+}
+
+@article{Boukouvala2021,
+   author = {Christina Boukouvala and Joshua Daniel and Emilie Ringe},
+   doi = {10.1186/s40580-021-00275-6},
+   issn = {2196-5404},
+   issue = {1},
+   journal = {Nano Convergence},
+   keywords = {Nanoparticle shape,Shape modelling,Shape modelling tools,Winterbottom construction,Wulff construction},
+   month = {9},
+   pages = {26},
+   publisher = {Korea Nano Technology Research Society},
+   title = {Approaches to modelling the shape of nanocrystals},
+   volume = {8},
+   url = {https://nanoconvergencejournal.springeropen.com/articles/10.1186/s40580-021-00275-6},
+   year = {2021},
+}
