--- a/thesis.tex
+++ b/thesis.tex
@@ -174,7 +174,7 @@
 \appendix
 
 \includeappendix{91functionalDerivative} 
-%%%%%%\includeappendix{92PFderivations} 
+%%%%%\includeappendix{92PFderivations} 
 \includeappendix{93PFparametersDetermination} 
 \includeappendix{94NumericalImplementation} 
 \includeappendix{95LagrangeMultipliersPF} 
