fixed problem with nomenclature display

--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -7,8 +7,8 @@
   \ifstrequal{#1}{P}{Symbols related to phase-field method}{%
   \ifstrequal{#1}{A}{Anisotropy-related symbols}{%
   \ifstrequal{#1}{N}{Nucleation-related symbols}{%
-  \ifstrequal{#1}{NPAPF}{Nucleation probability assessment - phase field}{%
-  \ifstrequal{#1}{NPAMC}{Analytic nucleation probability assessment and Monte Carlo simulations}{%
+  \ifstrequal{#1}{H}{Nucleation probability assessment - phase field}{%
+  \ifstrequal{#1}{G}{Analytic nucleation probability assessment and Monte Carlo simulations}{%
   \ifstrequal{#1}{O}{Other symbols}{}}}}}}%
 ]}
 % -----------------------------------------
@@ -93,19 +93,19 @@
 
 
 % Analytic nucleation probability assessment and Monte Carlo simulations
-\nomenclature[NPAMC]{$\hat{A}_{hom}$}{non-dimensional area of the nucleus created in homogeneous nucleation in 2D space}
-\nomenclature[NPAMC]{$\alpha_1, \alpha_2$}{crystallographic orientation of the substrate and nucleus, respectively (in 2D)}
-\nomenclature[NPAMC]{$\beta$}{non-dimensional nucleation barrier}
-\nomenclature[NPAMC]{$\theta_c^L, \theta_c^R$}{left and right contact point, respectively}
-\nomenclature[NPAMC]{$\sigma_1, \sigma_2, \sigma_3$}{interface energies of the three interfaces in the Winterbottom construction}
-\nomenclature[NPAMC]{$\Delta\alpha(\alpha_1,\alpha_2)$}{disorientation between the particle and substrate}
-\nomenclature[NPAMC]{$\sigma_{SL}, \sigma_{GB}$}{solid-liquid interface energy and grain boundary energy}
-\nomenclature[NPAMC]{$\sigma_{SL}^0, \sigma_{GB}^0$}{scalar factor in solid-liquid interface energy and grain boundary energy}
-\nomenclature[NPAMC]{$\sigma_{SL}^0, \sigma_{GB}^0$}{scalar factor in solid-liquid interface energy and grain boundary energy}
-\nomenclature[NPAMC]{$E_0$}{nucleation site interface energy before any particle was inserted}
-\nomenclature[NPAMC]{$E_{m''}$}{nucleation site total interface energy after insertion of neighboring orientation $m'' $}
-\nomenclature[NPAMC]{$\Delta E$}{minimal possible energy change during growth in a nucleation site}
-\nomenclature[NPAMC]{$\xi_1, \xi_2, \xi_3$}{random numbers drawn during the orientation sampling algorithm}
+\nomenclature[G]{$\hat{A}_{hom}$}{non-dimensional area of the nucleus created in homogeneous nucleation in 2D space}
+\nomenclature[G]{$\alpha_1, \alpha_2$}{crystallographic orientation of the substrate and nucleus, respectively (in 2D)}
+\nomenclature[G]{$\beta$}{non-dimensional nucleation barrier}
+\nomenclature[G]{$\theta_c^L, \theta_c^R$}{left and right contact point, respectively}
+\nomenclature[G]{$\sigma_1, \sigma_2, \sigma_3$}{interface energies of the three interfaces in the Winterbottom construction}
+\nomenclature[G]{$\Delta\alpha(\alpha_1,\alpha_2)$}{disorientation between the particle and substrate}
+\nomenclature[G]{$\sigma_{SL}, \sigma_{GB}$}{solid-liquid interface energy and grain boundary energy}
+\nomenclature[G]{$\sigma_{SL}^0, \sigma_{GB}^0$}{scalar factor in solid-liquid interface energy and grain boundary energy}
+\nomenclature[G]{$\sigma_{SL}^0, \sigma_{GB}^0$}{scalar factor in solid-liquid interface energy and grain boundary energy}
+\nomenclature[G]{$E_0$}{nucleation site interface energy before any particle was inserted}
+\nomenclature[G]{$E_{m''}$}{nucleation site total interface energy after insertion of neighboring orientation $m'' $}
+\nomenclature[G]{$\Delta E$}{minimal possible energy change during growth in a nucleation site}
+\nomenclature[G]{$\xi_1, \xi_2, \xi_3$}{random numbers drawn during the orientation sampling algorithm}
 
 
 % Nucleation probability assessment - phase field
