added: glossary, nomenclature to NPA-PF chapter, CV section, declaration about the use of AI, Dutch abstract, reviewed abstract Fixed: date of publication, titles of jury members To do: preface (ONLY THAT)

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -1936,3 +1936,50 @@ year = {2000}
    url = {https://nanoconvergencejournal.springeropen.com/articles/10.1186/s40580-021-00275-6},
    year = {2021},
 }
+
+
+@article{Dudr2017,
+   author = {Martin Dudr and Daniel Šimek and Jan Drahokoupil},
+   doi = {10.14311/APP.2017.9.0008},
+   issn = {2336-5382},
+   journal = {Acta Polytechnica CTU Proceedings},
+   keywords = {X-Ray diffraction,combined load,nitinol spring,phase analysis,synchrotron},
+   month = {7},
+   pages = {8-12},
+   publisher = {Czech Technical University in Prague - Central Library},
+   title = {PHASE ANALYSIS OF NITI WIRE BASED ON SYNCHROTRON 2D X-RAY DIFFRACTION PATTERN IN MATLAB},
+   volume = {9},
+   url = {https://ojs.cvut.cz/ojs/index.php/APP/article/view/4396},
+   year = {2017},
+}
+
+@article{Klecka2017,
+   author = {Jakub Klečka and František Lukáč and Martin Dudr},
+   doi = {10.4028/WWW.SCIENTIFIC.NET/SSP.270.124},
+   isbn = {9783035712414},
+   issn = {1662-9779},
+   journal = {Solid State Phenomena},
+   keywords = {Coherently Diffracting Domains,High Entropy Alloys,Rietveld Refinement,X-Ray Diffraction},
+   pages = {124-129},
+   publisher = {Trans Tech Publications Ltd},
+   title = {Influence of the Surface Condition of Specimens on the Size of Coherently Diffracting Domains},
+   volume = {270},
+   url = {https://www.scientific.net/SSP.270.124},
+   year = {2017},
+}
+
+@article{Lukac2018,
+   author = {Frantisek Lukac and Martin Dudr and Radek Musalek and Jakub Klecka and Jakub Cinert and Jan Cizek and Tomas Chraska and Jakub Cizek and Oksana Melikhova and Jan Kuriplach and Jiri Zyka and Jaroslav Malek},
+   doi = {10.1557/JMR.2018.320/METRICS},
+   issn = {20445326},
+   issue = {19},
+   journal = {Journal of Materials Research},
+   keywords = {powder metallurgy,salloy,sintering},
+   month = {10},
+   pages = {3247-3257},
+   publisher = {Cambridge University Press},
+   title = {Spark plasma sintering of gas atomized high-entropy alloy HfNbTaTiZr},
+   volume = {33},
+   url = {https://link.springer.com/article/10.1557/jmr.2018.320},
+   year = {2018},
+}
