--- a/thesis.tex
+++ b/thesis.tex
@@ -161,14 +161,14 @@
 % Show instructions on a separate page
 %\instructionschapters\cleardoublepage
 
-%\includechapter{01introduction}
-%\includechapter{02anisoIEintro}
-%\includechapter{03PFintro} 
-%%%%\includechapter{04PFMoelans} % EMPTY
-%\includechapter{05paper1} 
-%\includechapter{06PFnucleationBarrier} 
-%\includechapter{06paper2} 
-%\includechapter{90conclusion}
+\includechapter{01introduction}
+\includechapter{02anisoIEintro}
+\includechapter{03PFintro} 
+%%%\includechapter{04PFMoelans} % EMPTY
+\includechapter{05paper1} 
+\includechapter{06PFnucleationBarrier} 
+\includechapter{06paper2} 
+\includechapter{90conclusion}
 
 
 
@@ -176,16 +176,16 @@
 
 \appendix
 
-%\includeappendix{91functionalDerivative} 
+\includeappendix{91functionalDerivative} 
 %%%%%\includeappendix{92PFderivations} 
 
-%\includeappendix{93PFparametersDetermination} 
-%\includeappendix{94NumericalImplementation} 
-%\includeappendix{95LagrangeMultipliersPF} 
-%\includeappendix{96WulffProperties} 
+\includeappendix{93PFparametersDetermination} 
+\includeappendix{94NumericalImplementation} 
+\includeappendix{95LagrangeMultipliersPF} 
+\includeappendix{96WulffProperties} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\backmatter
+\backmatter
 
 %\includebibliography
 % BibTex
